# okta-mcp-server

./: .bacon.yml  .dockerignore  .env.example  .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  NOTICE.md  README.md  dependency_scan.sh  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: build_and_publish.yaml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: build-push-gcr.yml  build_and_publish.yaml  ci.yaml  ci.yml  ruff-check.yml
doc/changes/: 20260424-authlib-refactor.md
src/: __init__.py
src/okta_mcp_server/: __init__.py  server.py
src/okta_mcp_server/tools/applications/: __init__.py  applications.py
src/okta_mcp_server/tools/customization/brands/: brands.py
src/okta_mcp_server/tools/customization/custom_domains/: custom_domains.py
src/okta_mcp_server/tools/customization/custom_pages/: custom_pages.py
src/okta_mcp_server/tools/customization/custom_templates/: custom_templates.py
src/okta_mcp_server/tools/customization/email_domains/: email_domains.py
src/okta_mcp_server/tools/customization/themes/: themes.py
src/okta_mcp_server/tools/device_assurance/: device_assurance.py
src/okta_mcp_server/tools/groups/: groups.py
src/okta_mcp_server/tools/policies/: policies.py
src/okta_mcp_server/tools/system_logs/: login_failures.py  system_logs.py
src/okta_mcp_server/tools/user_resources/: user_resources.py
src/okta_mcp_server/tools/users/: __init__.py  users.py
src/okta_mcp_server/utils/: client.py  elicitation.py  messages.py  pagination.py  scope_guard.py  scope_registry.py  scope_stubs.py  serialization.py  validation.py
src/okta_mcp_server/utils/auth/: auth_manager.py
tests/: __init__.py  conftest.py  test_app_assignment.py  test_app_provisioning.py  test_app_user_profile.py  test_app_user_schema.py  test_application_model.py  test_applications_elicitation.py  test_auth_manager.py  test_client.py  test_create_application.py  test_create_user.py  test_custom_domains.py  test_custom_templates.py  test_device_assurance.py  test_elicitation_utils.py  test_entrypoint.py  test_get_app_saml_metadata.py  test_get_application.py  test_groups_elicitation.py  test_lifespan.py  test_list_applications.py  test_none_body_guards.py  test_oin_catalog.py  test_pagination.py  test_policies_elicitation.py  test_scope_stubs.py  test_serialization.py  test_server_lifespan.py  test_user_resources.py  test_users_elicitation.py  test_validation.py
tests/elicitation/: test_applications_elicitation.py  test_elicitation_utils.py  test_groups_elicitation.py  test_policies_elicitation.py  test_users_elicitation.py
