[project]
name = "okta-mcp-server"
version = "0.1.0"
description = "Okta MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mcp[cli]>=1.9.2",
    "okta>=2.9.13",
    "requests>=2.32.4",
    "ruff>=0.11.13",
    "keyring>=25.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okta_mcp_server"]

[project.scripts]
okta-mcp-server = "okta_mcp_server:main"
