[project]
name = "okta-mcp-server"
version = "1.1.4"
description = "The Okta Open Source MCP Server integrates with LLMs and AI agents, allowing you to perform various Okta management operations using natural language and is Generally Available (GA)."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE.md"]
authors = [
    { name = "Okta, Inc." },
]
maintainers = [
    { name = "Developer Community Products", email = "developer-community-products@okta.com" },
]
keywords = ["okta", "mcp", "model-context-protocol", "llm", "ai-agents", "identity", "iam"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.7.3",
    "mcp[cli]>=1.26.0,<2.0.0",
    "okta==3.4.4",
    "requests>=2.32.4",
    "keyring>=25.6.0",
    "keyrings.alt>=5.0.0",
    "flatdict>=4.1.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okta_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
  "src/okta_mcp_server",
  "README.md",
  "LICENSE",
  "NOTICE.md",
  "CHANGELOG.md",
  "SECURITY.md",
  "pyproject.toml",
]
exclude = [
  "**/__pycache__",
  "**/*.pyc",
  "tests/**",
  ".vscode/**",
  ".idea/**",
  "assets/**",
  "docs/**",
  "Dockerfile",
  "docker-compose.yml",
  ".env*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.13",
]

[project.urls]
Homepage      = "https://github.com/okta/okta-mcp-server"
Documentation = "https://github.com/okta/okta-mcp-server#readme"
Repository    = "https://github.com/okta/okta-mcp-server"
Issues        = "https://github.com/okta/okta-mcp-server/issues"
Changelog     = "https://github.com/okta/okta-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
okta-mcp-server = "okta_mcp_server:main"
